Add LFS; Clean up some frontend code; Implement button to randomize fact
